; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mcheck/extr_mce_amd.c_mce_threshold_block_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mcheck/extr_mce_amd.c_mce_threshold_block_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.threshold_block = type { i32 }
%struct.thresh_restart = type { i32, i32, %struct.threshold_block* }

@THRESHOLD_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.threshold_block*, i32)* @mce_threshold_block_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mce_threshold_block_init(%struct.threshold_block* %0, i32 %1) #0 {
  %3 = alloca %struct.threshold_block*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.thresh_restart, align 8
  store %struct.threshold_block* %0, %struct.threshold_block** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.thresh_restart, %struct.thresh_restart* %5, i32 0, i32 0
  store i32 1, i32* %6, align 8
  %7 = getelementptr inbounds %struct.thresh_restart, %struct.thresh_restart* %5, i32 0, i32 1
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.thresh_restart, %struct.thresh_restart* %5, i32 0, i32 2
  %10 = load %struct.threshold_block*, %struct.threshold_block** %3, align 8
  store %struct.threshold_block* %10, %struct.threshold_block** %9, align 8
  %11 = load i32, i32* @THRESHOLD_MAX, align 4
  %12 = load %struct.threshold_block*, %struct.threshold_block** %3, align 8
  %13 = getelementptr inbounds %struct.threshold_block, %struct.threshold_block* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = call i32 @threshold_restart_bank(%struct.thresh_restart* %5)
  ret void
}

declare dso_local i32 @threshold_restart_bank(%struct.thresh_restart*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
